# youtube-lyrics-generator

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
docs/: abstract_content_routing.md  fix-whisper-transcription-reliability.md  formatted_transcript_output.md  three_category_routing.md
util/: env_config.py  tools.py
